apps/cert-manager-operator/networkpolicies/egress-allow-external.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-allow-external
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    # ACME (Let's Encrypt) and the Cloudflare DNS-01 API.
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
